# msc-thesis-code

./: .gitignore  diffusion.py  ll.py  lls.R  lls_step.R  lls_step_vis.R  process.py  pyproject.toml  score.py  score_plots.py  time_perspectives.py  trainer.py  use.py  vis.py  visualisation.R  visualise.py
paper-plots/: brownian_2d_points_collection.py  diffusion_mean_points.sh  skulls.sh  variance_estimation_plots.sh  variance_methods.R  variance_plot.R  variance_skull.R  visualise_brownian_diffusion_mean.py
tests/: test_common.py  test_inference.py
thesis/: experiments.py
thesis/experiments/: __init__.py  constraints.py  diffusion_processes.py  experiments.py  simulators.py
thesis/inference/: diffusion_mean.py  likelihood.py  variance.py
thesis/lightning/: __init__.py  checkpointers.py  loggers.py  trainer.py
thesis/models/: baseline.py  models.py  networks.py  objectives.py
thesis/processes/: diffusion.py  process.py
thesis/scripts/: brownian.py  brownian_1d.py  brownian_2d.py  brownian_2d_likelihood.py  brownian_2d_mixture.py  butterflies.py  butterfly.py  common.py  likelihood.py  likelihood_vis.py  pedersen-skull.py  pedersen-stable.py  pedersen.R  pedersen.py
thesis/visualisations/: il.py  illustrations.py  loss_plot.R  score_plots.py  time_perspectives.R  time_perspectives.py  vis.py  wiener.R  wiener.py
